# eics

./: .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  configure  configure.ac
lib/: Makefile.am  Makefile.in  memcmp2.c  memcmp2.h  string.h  unistd.h
m4/: aclocal.m4  dotconf.m4  gnulib-cache.m4  gnulib-comp.m4
src/: Makefile.am  Makefile.in  config.h.in  crc.cc  database.cc  eics.h  eics.hh  entry.cc  filesystem.cc  getpass.c  gnutls-compat.c  hash.cc  keys.cc  logging.cc  main.cc  misc.cc  policy.cc  processor.cc
